<resources>
    <string name="app_name">InventoryApp</string>
    <string name="create_dummy_data">Insert dummy data</string>
    <string name="clear_database">Delete all data</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="category_overview">Overview</string>
    <string name="there_is_no_product">There is no product</string>
    <string name="add_something">Add something</string>
    <string name="sale">Sale</string>
    <string name="toast_message_cant_sell_more_nothings_left">You can\'t sell more!</string>
    <string name="quantity">Quantity</string>
    <string name="edit_product_button">Edit product</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="price">Price</string>
    <string name="product">Product</string>
    <string name="supplier">Supplier</string>
    <string name="order">Order now</string>
    <string name="error_subtract_quantity">Quantity must by grater than 0!</string>
    <string name="no_supplier_phone">Supplier phone is empty</string>
    <string name="required_fields">Product name, supplier name, price and quantity are required. Please, update empty fields</string>
    <string name="image_of_empty_box">Image of empty box</string>
    <string name="product_name_hint">Product Name</string>
    <string name="supplier_name_hint">Supplier name</string>
    <string name="supplier_phone_hint">Supplier phone</string>
    <string name="pcs">pcs</string>
</resources>
